# simplest-cget

goofy-find-package/: CMakeLists.txt  cat-config.cmake
goofy-find-package-user/: CMakeLists.txt
goofy-find-package-user/src/: main.cpp
goofy-find-package/include/: cat.hpp
goofy-find-package/src/: cat.cpp
includes/: CMakeLists.txt
includes/include/: cool.hpp
lib/: CMakeLists.txt
lib-user/: CMakeLists.txt
lib-user/src/: main.cpp
lib/include/: dog.hpp
lib/src/: dog.cpp
